<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/margin_padding_16dp"
    tools:context="com.vengage.inventoryapp.EditorActivity">


    <ImageView
        android:id="@+id/product_image"
        android:layout_width="@dimen/product_image_width_height"
        android:layout_height="@dimen/product_image_width_height"
        android:layout_gravity="center_horizontal"
        tools:src="@drawable/no_product_image"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/product_name"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
            android:textColor="@color/colorAccent"/>

        <EditText
            android:id="@+id/edit_product_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:hint="@string/product_name"
            android:inputType="textCapWords"
            android:maxLines="1"
            android:paddingLeft="@dimen/margin_padding_4dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/product_price"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
            android:textColor="@color/colorAccent"/>

        <EditText
            android:id="@+id/edit_product_price"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:hint="@string/product_price"
            android:inputType="number"
            android:maxLength="4"
            android:maxLines="1"
            android:paddingLeft="@dimen/margin_padding_4dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:text="@string/product_quantity"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
            android:textColor="@color/colorAccent"/>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="horizontal">

            <Button
                android:id="@+id/increase_product_quantity"
                style="@style/Base.Widget.AppCompat.Button.Small"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_marginLeft="@dimen/margin_padding_4dp"
                android:background="@mipmap/ic_increase"/>

            <EditText
                android:id="@+id/edit_product_quantity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_padding_4dp"
                android:layout_marginRight="@dimen/margin_padding_4dp"
                android:digits="0123456789"
                android:hint="@string/product_quantity"
                android:inputType="number"
                android:maxLength="2"
                android:paddingLeft="@dimen/margin_padding_4dp"
                android:textAlignment="center"/>

            <Button
                android:id="@+id/decrease_product_quantity"
                style="@style/Base.Widget.AppCompat.Button.Small"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_marginRight="@dimen/margin_padding_4dp"
                android:background="@mipmap/ic_decrease"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_padding_16dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:text="@string/product_supplier"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
            android:textColor="@color/colorAccent"/>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="vertical"
            android:paddingLeft="@dimen/margin_padding_4dp">

            <EditText
                android:id="@+id/edit_product_supplier_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/product_supplier_name"
                android:inputType="textCapWords"
                android:maxLines="1"
                android:paddingLeft="@dimen/margin_padding_4dp"/>

            <EditText
                android:id="@+id/edit_product_supplier_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/product_supplier_email"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:paddingLeft="@dimen/margin_padding_4dp"/>
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/product_order_supplier"
        style="@android:style/Widget.DeviceDefault.Button.Borderless.Small"
        android:layout_width="@dimen/send_email_button_width_height"
        android:layout_height="@dimen/send_email_button_width_height"
        android:layout_gravity="center_horizontal"
        android:layout_margin="@dimen/margin_padding_16dp"
        android:background="@mipmap/ic_email"/>
</LinearLayout>
