<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:descendantFocusability="blocksDescendants"
                android:padding="@dimen/margin_padding_16dp">

    <ImageView
        android:id="@+id/product_image"
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:layout_centerVertical="true"
        android:layout_marginRight="@dimen/margin_padding_16dp"
        tools:src="@drawable/no_product_image"/>

    <LinearLayout
        android:id="@+id/product_details"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_padding_4dp"
        android:layout_toEndOf="@id/product_image"
        android:layout_toRightOf="@id/product_image"
        android:orientation="vertical">

        <TextView
            android:id="@+id/product_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
            android:textColor="@android:color/black"
            tools:text="@string/app_name"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_padding_4dp"
            android:layout_marginLeft="@dimen/margin_padding_16dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/margin_padding_16dp"
                android:text="@string/quantity"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"/>

            <TextView
                android:id="@+id/product_quantity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                tools:text="@string/app_name"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_padding_4dp"
            android:layout_marginLeft="@dimen/margin_padding_16dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/margin_padding_16dp"
                android:text="@string/price"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"/>

            <TextView
                android:id="@+id/product_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                tools:text="@string/app_name"/>
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/product_buy"
        style="@style/Widget.AppCompat.Button.Small"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:background="@mipmap/ic_product_buy"/>
</RelativeLayout>